--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,3 +28,30 @@ body {
   border-radius: 2%;
   opacity: .95;
 }
+
+.developers {
+  display:flex;
+  flex-direction: row;  
+  justify-content: space-evenly;
+  margin: 5px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.kameron,
+.mike,
+.amit,
+.andrew,
+.zev {
+    display: flex;
+    flex-direction: column;
+  
+    justify-items: center;
+    width: 100px;
+    height: 300px;
+}
+
+.header{
+  justify-items: center;
+
+}
