--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ body {
 .App {
   background-color: rgba(244, 245, 233, 0.918);
   color: black;
-  padding:1% 10% 5% 10%;
+  padding:1% 10% 1% 10%;
   margin:0% 10% 5% 10%;
   border-radius: 2%;
   opacity: .95;
@@ -33,9 +33,9 @@ body {
   display:flex;
   flex-direction: row;  
   justify-content: space-evenly;
-  margin: 5px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  margin: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .kameron,
@@ -45,13 +45,35 @@ body {
 .zev {
     display: flex;
     flex-direction: column;
-  
     justify-items: center;
     width: 100px;
-    height: 300px;
+    height: 250px;
+
 }
 
-.header{
-  justify-items: center;
 
+
+
+.homeLink{
+  color:red;
+  text-decoration: none;
+
+}
+
+img{
+  border-radius: 10px;
+}
+.jumbotron{
+  border-style:groove;
+  border:1;
+  font-style: oblique;
+  border-radius: 8px;
+}
+
+.MuiTabs-flexContainer,
+.MuiButtonBase-root,
+.MuiTab-root,
+.MuiTab-wrapper,
+.MuiTouchRipple-root{
+  border-radius: 8px;
 }
