--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,17 +16,18 @@ body {
   background-image: url("https://images.unsplash.com/photo-1531824475211-72594993ce2a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
   background-attachment: fixed;
   background-size: cover;
-  padding: 40px;
+  padding: 2%;
   font-family: Arial;
   text-align: center;
 }
+
 .App {
-  background-color: rgba(244, 245, 233, 0.918);
+  background-color: rgba(244, 245, 233, 0.98);
   color: black;
-  padding:1% 10% 1% 10%;
-  margin:0% 10% 5% 10%;
+  padding:1% 5% 1% 5%;
+  margin:0% 5% 5% 5%;
   border-radius: 2%;
-  opacity: .95;
+  /* opacity: 1; */
 }
 
 .developers {
