--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,12 @@ body {
   /* opacity: 1; */
 }
 
+.checkboxCluster {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .developers {
   display:flex;
   flex-direction: row;  
@@ -52,7 +58,9 @@ body {
 
 }
 
-
+.greyLabel {
+  color: rgb(110, 110, 105)
+}
 
 
 .homeLink{
@@ -61,9 +69,11 @@ body {
 
 }
 
-img{
+
+img {
   border-radius: 10px;
 }
+
 .jumbotron{
   border-style:groove;
   border:1;
